String -> ERegion
